--- a/web/jQueryCSS.css
+++ b/web/jQueryCSS.css
@@ -8,9 +8,6 @@ html, body {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-#container {
-
-}
 #content a:visited {
     color: yellow;
     text-decoration: none;
@@ -23,17 +20,20 @@ html, body {
 #titleNav a:link {
     color: white;
     text-decoration: none;
-} 
+}
+
 #titleNav a:visited {
     color: white;
     text-decoration: none;
-} 
+}
+
 #titleNav a:hover {
     color: purple;
     text-decoration: none;
-} 
+}
+
 #titleNav   {
-    z-index:2;       
+    z-index:4;       
     position:fixed; 
     top:0px;        
     left:0px;       
@@ -45,9 +45,9 @@ html, body {
     min-width: 90%;  
     border: black solid ;
     text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
-
+    border-bottom-left-radius:16px;
+    border-bottom-right-radius:16px;
 }
-
 
 #pageTitle {
     padding-top:10px;
@@ -59,49 +59,114 @@ html, body {
     float:left;
 }
 #nav {
-    padding:29px;
+    padding:20px;
     font-size:22px;
     letter-spacing: 1px;
     font-weight:bold;
     float:right;
     text-align:center;
-    
+    position:absolute;
+    right:0px;
+    top:0px;
+
 }
-.stopFloat {
-    clear:both;
+.navHead{
+    width:138px;
+    text-align:center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius:5px;      
+    background-color: #0052cc;
+    border: 2px solid #000000;
+}
+.navdd{
+    margin-left: 8px;
+    width:122px;
+    text-align:center;
+    top: 0px;
+    padding-bottom: 10px;
+    display:none;  
+    border-bottom-left-radius:16px;
+    border-bottom-right-radius:16px;
+    background-color: #0052cc;
+    border:2px outset #000000;
+}
+.navGroup a{
+    color: #14145E;
 }
 #content {
-    margin-top: 30px;    
+    margin-top: 50px;    
     margin-bottom: 35px;
     padding:10px;
     color: white;
-    position: relative;
+    position: absolute;
     text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
-    z-index:1;
-
-   
+    z-index:2;
 }
+
 #pic{
     position: fixed;
     top: 235px;
-    left: 420px;
+    left: 35%;
     opacity: 0.45;
-    z-index: -1;
-    
+    z-index: 0;
 }
 #footer {
-    z-index:2;       
+    z-index:3;       
     width: 100%;     
     position:fixed;  
     bottom:0px;      
     left:0px;        
-
-    color:white;
-    clear:both;
+    padding:20px;
     text-align:center;
-    padding:10px;
-    font-size:15px;
-    letter-spacing:0.75px;
     background-color:black;
     opacity: 0.85;
+}
+
+#pic2{
+    position: absolute;
+    top: -9px;
+    left: 10px;
+}
+
+.nonTitle{
+    position:relative;
+}
+
+.footerwords{
+    position: absolute;
+    left: 0%;
+    top: 10px;
+    font-size:15px;
+    letter-spacing:0.75px;
+    color:white;
+    clear:both;
+    z-index: 3;
+    width: 100%
+}
+
+.picText{
+    position: absolute;
+    top: 400px;
+    right: 3%;
+    z-index: 3;
+    color: #FFFFFF;
+    border: solid #000000;
+    width: 100px;
+    text-align: center;
+    padding-top: 2px;
+    background-color: #ff0000;
+    border-radius: 30px;
+    text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
+}
+
+.picSlide{
+    position: absolute;
+    margin-left: 8px;
+    float: right;
+    top:0%;
+    left:0%;
+    padding-bottom: 10px;
+    display:none;  
+    z-index: 3;
 }
